--- a/terraform/ec2_with_s3_bucket_mount/poc.yml
+++ b/terraform/ec2_with_s3_bucket_mount/poc.yml
@@ -6,55 +6,49 @@
   become: true
   gather_facts: false
 
-  pre_tasks:
-    - name: Update dependencies via apt-get
-      raw: apt-get clean && \
-      apt-get autoclean && \
-      apt autoremove -y && \
-      apt-get update -y
+  # pre_tasks:
+  #   - name: Update dependencies via apt-get
+  #     raw: apt-get clean && apt-get autoclean && apt autoremove -y && apt-get update -y
 
-    - name: Installing awscli, https transport, build-essential, Python & PIP
-      raw: apt-get install -y \
-      awscli \
-      apt-transport-https \
-      build-essential \
-      python-minimal \
-      python-setuptools \
-      python-pip \
-      software-properties-common
+  #   - name: Installing awscli, https transport, build-essential, Python & PIP
+  #     raw: apt-get install -y awscli apt-transport-https build-essential python-minimal python-setuptools python-pip software-properties-common
 
   tasks:
-    - name: Install system dependencies
-      apt:
-        pkg:
-          - automake
-          - autotools-dev
-          - fuse
-          - g++
-          - git
-          - libcurl4-gnutls-dev
-          - libfuse-dev
-          - libssl-dev
-          - libxml2-dev
-          - make
-          - pkg-config
-        state: present
+    # - name: Install system dependencies
+    #   apt:
+    #     pkg:
+    #       - automake
+    #       - autotools-dev
+    #       - fuse
+    #       - g++
+    #       - git
+    #       - libcurl4-gnutls-dev
+    #       - libfuse-dev
+    #       - libssl-dev
+    #       - libxml2-dev
+    #       - make
+    #       - pkg-config
+    #     state: present
 
-    - git:
-      accept_hostkey: yes
-      remote: origin
-      depth: 1
-      dest: /home/ubuntu/ConnecHub
-      repo: https://github.com/s3fs-fuse/s3fs-fuse.git
-      version: master
-      force: true
+    # - git:
+    #     accept_hostkey: yes
+    #     remote: origin
+    #     depth: 1
+    #     dest: /home/ubuntu/s3fs-fuse
+    #     repo: https://github.com/s3fs-fuse/s3fs-fuse.git
+    #     version: master
+    #     force: true
 
-    - name: Set API credentials fo S3FS can access S3 service from EC2.
-      command: > 
-        touch /etc/passwd-s3fs
-        echo "{{AWS_ACCESS_KEY}}:{{AWS_SECRET_KEY}}" > /etc/passwd-s3fs
+    # - lineinfile:
+    #     create: true
+    #     line: "{{AWS_ACCESS_KEY}}:{{AWS_SECRET_KEY}}"
+    #     path: /etc/passwd-s3fs
+    #     state: present
+    #     owner: ubuntu
+    #     group: ubuntu
+    #     mode: 0600
 
-    - name: Simple GET operation
+    - name: Compile and use S3FS to mount a bucket
       command: > 
         cd s3fs-fuse
         ./autogen.sh
@@ -64,140 +58,4 @@
         which s3fs
         cd ../
         mkdir ./testing
-        s3fs poc-media-tst-1a39d059-0107-0ad7-1383-74c2b6bcd513 -o use_cache=/tmp -o allow_other -o uid=1001 -o mp_umask=002 -o multireq_max=5 ./testing
-
-    # - name: Install NodeJs and NPM
-    #   apt:
-    #     pkg:
-    #       - nodejs 
-    #       - nodejs-dev 
-    #       - node-gyp 
-    #       - npm
-    #     state: present
-
-    # # Source: https://github.com/wakproductions/ansible-examples/blob/master/roles/install-ruby241/tasks/main.yml
-    
-    # - name: Install dependencies specificly for Ruby 2.3.8
-    #   apt:
-    #     pkg:
-    #       - libyaml-dev
-    #       - libxml2-dev
-    #       - libxslt-dev
-    #       - libsqlite3-dev
-    #       - autoconf
-    #       - libc6-dev
-    #       - ncurses-dev
-    #       - automake
-    #       - libtool
-    #       - bison
-    #       - subversion
-    #       - zlib1g # http://askubuntu.com/questions/59205/no-such-file-to-load-zlib-error-when-installing-a-gem
-    #       - zlib1g-dev  # error while installing bundler: http://stackoverflow.com/questions/9727908/cannot-load-such-file-zlib-even-after-using-rvm-pkg-install-zlib
-    #       - libssl-dev
-    #     state: present
-
-    # # Ruby source, build, install, clean up
-
-    # - name: Create a working directory
-    #   file:
-    #     path:  /tmp/build_ruby
-    #     state: directory
-    #     mode: 'u+rwx'
-
-    # - name: Download Ruby 2.3.8
-    #   get_url:
-    #     url:  https://cache.ruby-lang.org/pub/ruby/2.3/ruby-2.3.8.tar.gz
-    #     dest: /tmp/build_ruby/ruby-2.3.8.tar.gz
-
-    # - name: Unpack Ruby 2.3.8
-    #   unarchive:
-    #     src: /tmp/build_ruby/ruby-2.3.8.tar.gz
-    #     dest: /tmp/build_ruby/
-    #     remote_src: yes
-
-    # - name: Build ruby
-    #   command: >
-    #     {{ item }}
-    #     chdir=/tmp/build_ruby/ruby-2.3.8
-    #     creates=/usr/local/bin/ruby
-    #   with_items:
-    #     - ./configure --enable-shared
-    #     - make
-    #     - make install
-
-    # - name: Add ruby symlinks
-    #   file:
-    #     src: "/usr/local/bin/{{ item }}"
-    #     dest: "/usr/bin/{{ item }}"
-    #     state: link
-    #     force: yes
-    #   with_items:
-    #     - erb
-    #     - gem
-    #     - irb
-    #     - rake
-    #     - rdoc
-    #     - ruby
-
-    # - name: Remove the working directory
-    #   file:
-    #     path:  /tmp/build_ruby
-    #     state: absent
-
-    # # # MySQL client
-
-    # - name: Install mysql-client and dependencies
-    #   apt:
-    #     pkg:
-    #       - mysql-client
-    #       - libmysqlclient-dev
-    #     state: present
-
-    # - git_config:
-    #     name: credential.helper
-    #     value: '!aws codecommit credential-helper $@'
-
-    # - git_config:
-    #     name: credential.UseHttpPath
-    #     value: true
-
-    # - git:
-    #     accept_hostkey: yes
-    #     remote: origin
-    #     depth: 1
-    #     dest: /home/ubuntu/ConnecHub
-    #     repo: https://git-codecommit.us-east-1.amazonaws.com/v1/repos/ConnecHub
-    #     version: master
-    #     force: true
-
-    # # TODO would like to use the bundler module
-
-    # - name: Install bunbler and gems
-    #   shell: |
-    #     cd /home/ubuntu/ConnecHub && gem install bundler -v 1.3.5 && ./bin/bundle install
-
-    # - name: Simple GET operation
-    #   command: > 
-    #     aws s3 cp s3://connechub-configs/prd/.env /home/ubuntu/ConnecHub/.env
-
-    # # TODO: Consider using the replace, lineinfile or template module rather than running sed.
-
-    # - name: Update RDS DNS address 
-    #   command: >
-    #     sed -i 's/DB_HOST="mariadb"/DB_HOST="{{ rd_dns }}"/g' /home/ubuntu/ConnecHub/.env
-
-    # - name: Change ownership of web app dir
-    #   file:
-    #     path: /home/ubuntu/ConnecHub
-    #     group: ubuntu
-    #     owner: ubuntu
-    #     recurse: true
-
-    # # - name: Install and Migrate database
-    # #   become: ubuntu
-    # #   shell: |
-    # #     cd /home/ubuntu/ConnecHub && ./bin/rake db:setup && ./bin/rake db:migrate
-
-    # - name: Start Rails server
-    #   shell: |
-    #     cd /home/ubuntu/ConnecHub && rails server -d --binding 0.0.0.0 --port 80
+        s3fs poc-media-tst-1fb3fdcb-8789-0844-e364-06a1b4bcf3cf -o use_cache=/tmp -o allow_other -o uid=1001 -o mp_umask=002 -o multireq_max=5 ./testing
